--- a/Index.html
+++ b/Index.html
@@ -23,13 +23,27 @@
                 <li><a href="#">Habilidades</a></li>
                 <li><a href="#">Contato</a></li>
             </ul><!--cabeçalho-link-->
-            <a href="#" class="btn">Subscribe</a>
+            <a href="https://api.whatsapp.com/send/?phone=21975033796&text&type=phone_number&app_absent=0" target="_blank" rel="noopener noreferrer" class="btn">Meu contato</a>
         </nav>
+        <div class="QR-CODE">
+            <img src="WhatsApp Image 2022-08-31 at 15.56.11.jpeg" width="170" height="150">    
+        </div>
+
+        <h1 class="linguagens">Minhas linguagens</h1>
+
+        <div class="linguagens-icons">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/csharp/csharp-original.svg"  width="80" height="80" />
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg"  width="80" height="80"/>
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" width="80" height="80" />
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" width="80" height="80" />
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/dotnetcore/dotnetcore-original.svg" width="80" height="80" />
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" width="80" height="80" />
+        </div>
 
         <div class="Main">
             <h4>Ola, meu nome é</h4>
             <h1>Rodrigo <span>Meckelburg</span></h1>
-            <h3>Eu sou um desenvolvedor C# & web</h3>
+            <h3>Eu sou um desenvolvedor C# & Web</h3>
             <div class="Container-btn">
                 <form>
                     <input type="email" nome="email" id="mail" placeholder="Envie seu Email">
@@ -49,16 +63,18 @@
                 <h2>Sobre-Mim</h2>
                 <h5>Desenvolvedor <span>& designer</span></h5>
                 <p>Eu sou um Desenvolvedor C# front-end & back-end .net. . Eu posso fornecer codigos limpos e imagem de desing perfeito. E também fazer o website mais & mais interativo e com animação web. E posso Deixar seu site responsivo, e que ele acesse todos os usuarios, independente dos seus aparelhos dispositivos.</p>
-                <button type="button">Vamos conversa</button><!--Button-->
+                <button type="button">Vamos conversa</button>
+                <!--Button-->
             </div><!--Text-sobre-->
         </div><!--main-sobre-->
-    </section><!--background-color-Sobre-->
+    </section>
+     <!--background-color-Sobre-->
 
     <!--Começo-da-seção-nossos-serviços-->
 
     <div class="Container-serviços">
         <div class="title">
-            <h2>Nossos Serviços</h2>
+            <h2>Meus Serviços</h2>
         </div><!--title-->
 
         <div class="Caixa">
@@ -103,9 +119,10 @@
         <p>Para mais HTML E CSS, tutorias - por favor clique no link abaixo para se inscrever no meu canal</p>
         <div class="Redes-sociais">
             <a href="#"><i class="fab fa-facebook-f"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.instagram.com/rodrigomeckel17/" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
             <a href="#"><i class="fab fa-dribbble"></i></a>
         </div><!--Redes-sociais-->
+        <p class="gmail">rodrigomeckel@gmail.com</p>
         <p class="end">CopyRight By Rodrigo Meckelburg</p>
     </footer>
 
