--- a/Index.html
+++ b/Index.html
@@ -11,25 +11,24 @@
     <title>Portfolio website</title>
 </head>
 <body>
-    <!---Cabeçalho-Main-->
 
     <div class="background">
         <nav>
-            <h2 class="logo">Portfo<span>lio</span></h2><!--Logo-->
+            <h2 class="logo">Portfo<span>lio</span></h2>
             <ul class="cabeçalho-link">
                 <li><a href="#">Inicio</a></li>
                 <li><a href="#">Sobre mim</a></li>
                 <li><a href="#">Serviços</a></li>
                 <li><a href="#">Habilidades</a></li>
                 <li><a href="#">Contato</a></li>
-            </ul><!--cabeçalho-link-->
+            </ul>
             <a href="https://api.whatsapp.com/send/?phone=21975033796&text&type=phone_number&app_absent=0" target="_blank" rel="noopener noreferrer" class="btn">Meu contato</a>
         </nav>
         <div class="QR-CODE">
             <img src="WhatsApp Image 2022-08-31 at 15.56.11.jpeg" width="170" height="150">    
         </div>
 
-        <h1 class="linguagens">Minhas linguagens</h1>
+        <h3 class="linguagens">Minhas linguagens</h3>
 
         <div class="linguagens-icons">
             <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/csharp/csharp-original.svg"  width="80" height="80" />
@@ -37,7 +36,9 @@
             <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" width="80" height="80" />
             <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" width="80" height="80" />
             <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/dotnetcore/dotnetcore-original.svg" width="80" height="80" />
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" width="80" height="80" />
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" width="80" height="80"/>
+        </div>
+
         </div>
 
         <div class="Main">
@@ -49,12 +50,10 @@
                     <input type="email" nome="email" id="mail" placeholder="Envie seu Email">
                     <input type="submit" name="submit" value="Começar">
                 </form>
-            </div><!--Container-btn-->
-        </div><!--Main-->
-    </div><!--background-->
+            </div>
+        </div>
+    </div>
 
-
-    <!--Começo-da-seção-sobre-->
 
     <section class="background-color-Sobre">
         <div class="main-sobre">
@@ -64,18 +63,14 @@
                 <h5>Desenvolvedor <span>& designer</span></h5>
                 <p>Eu sou um Desenvolvedor C# front-end & back-end .net. . Eu posso fornecer codigos limpos e imagem de desing perfeito. E também fazer o website mais & mais interativo e com animação web. E posso Deixar seu site responsivo, e que ele acesse todos os usuarios, independente dos seus aparelhos dispositivos.</p>
                 <button type="button">Vamos conversa</button>
-                <!--Button-->
-            </div><!--Text-sobre-->
-        </div><!--main-sobre-->
+            </div>
+        </div>
     </section>
-     <!--background-color-Sobre-->
-
-    <!--Começo-da-seção-nossos-serviços-->
 
     <div class="Container-serviços">
         <div class="title">
             <h2>Meus Serviços</h2>
-        </div><!--title-->
+        </div>
 
         <div class="Caixa">
             <div class="Card">
@@ -83,45 +78,43 @@
                 <h5>Desenvolvedor web</h5>
                 <div class="Paragrafo-button">
                     <p>Muitos sites devem ser contruido com dois principais objetivos: Primeiramente , ele precisar funcionar em todos os dispositivos. Segundo, Ele precisar ser o mais rapido possivel </p>
-                    <button type="button">Ler Mais</button><!--button-->
-                </div><!--Paragrafo-button-->
-            </div><!--Card-->
+                    <button type="button">Ler Mais</button>
+                </div>
+            </div>
 
             <div class="Card">
                 <i class="fas fa-user"></i>
                 <h5>Desenvolvedor web</h5>
                 <div class="Paragrafo-button">
                     <p>Muitos sites devem ser contruido com dois principais objetivos: Primeiramente , ele precisar funcionar em todos os dispositivos. Segundo, Ele precisar ser o mais rapido possivel </p>
-                    <button type="button">Ler Mais</button><!--button-->
-                </div><!--Paragrafo-button-->
-            </div><!--Card-->
+                    <button type="button">Ler Mais</button>
+                </div>
+            </div>
 
             <div class="Card">
                 <i class="fas fa-bell"></i>
                 <h5>Desenvolvedor web</h5>
                 <div class="Paragrafo-button">
                     <p>Muitos sites devem ser contruido com dois principais objetivos: Primeiramente , ele precisar funcionar em todos os dispositivos. Segundo, Ele precisar ser o mais rapido possivel </p>
-                    <button type="button">Ler Mais</button><!--button-->
-                </div><!--Paragrafo-button-->
-            </div><!--Card-->
-        </div><!--Caixa-->
-    </div><!--Conatiner-serviços-->
+                    <button type="button">Ler Mais</button>
+                </div>
+            </div>
+        </div>
+    </div>
     
-    <!--Contatos-->
     <div class="me-contate">
         <p>Me Contate Aqui !!!</p>
-        <button type="button">Enviar mensagem</button><!--button-->
-    </div><!--me-contate-->
+        <a href="https://api.whatsapp.com/send/?phone=21975033796&text&type=phone_number&app_absent=0"  target="_blank" rel="noopener noreferrer"> <button type="button">Enviar mensagem</button> </a>  <!--button-->
+    </div>
 
-    <!--Rodapé--->
     <footer>
           <h6>Rodrigo Meckelburg</h6>
-        <p>Para mais HTML E CSS, tutorias - por favor clique no link abaixo para se inscrever no meu canal</p>
+        <p>Para mais informações - por favor clique no link abaixo!!!</p>
         <div class="Redes-sociais">
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.linkedin.com/in/rodrigo-meckelburg-174502229" target="_blank" rel="noopener noreferrer" ><img src="linkedin.png" alt="linkedin" width="18" height="18" ></a>
             <a href="https://www.instagram.com/rodrigomeckel17/" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-dribbble"></i></a>
-        </div><!--Redes-sociais-->
+            <a href="https://github.com/Rodrigomeckel" target="_blank" rel="noopener noreferrer" ><img src="github.png" alt="github" width="26" height="26"></a>
+        </div>
         <p class="gmail">rodrigomeckel@gmail.com</p>
         <p class="end">CopyRight By Rodrigo Meckelburg</p>
     </footer>
